// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > network should handle decrement outstanding requests 1`] = `
Object {
  "error": null,
  "erroredFetches": Array [],
  "fetches": Array [],
}
`;

exports[`reducers > network should handle default state 1`] = `
Object {
  "error": null,
  "erroredFetches": Array [],
  "fetches": Array [],
}
`;

exports[`reducers > network should handle increment outstanding requests 1`] = `
Object {
  "error": null,
  "erroredFetches": Array [],
  "fetches": Array [],
}
`;

exports[`reducers > network should handle lock ui with error 1`] = `
Object {
  "error": "mockError",
  "erroredFetches": Array [],
  "fetches": Array [],
}
`;
